# scheme

./: .gitignore  CURRENT_STATE_ANALYSIS.md  Cargo.toml  DESIGN_PRINCIPLES_IMPROVEMENTS.md  DEVELOPMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PARAMETER_MANAGEMENT_DESIGN.md  PRD.md  README.md  bifurcation_export.json  complex_system_export.json  roundtrip_test.json  run_3d_examples.ps1  run_examples.ps1  single_channel_export.json  trifurcation_export.json
benches/: geometry_benchmarks.rs  metadata_benchmarks.rs  optimization_benchmarks.rs  visualization_benchmarks.rs
docs/: CSGRS_ANALYSIS_REPORT.md  CSG_ENHANCEMENT_PLAN.md
docs/adr/: 001-three-track-csg-development-methodology.md  003-csgrs-mathematical-enhancements.md  004-csgrs-algorithm-optimizations.md
examples/: colored_channel_demo.rs  comprehensive_arc_collision_prevention_demo.rs  comprehensive_arc_demo.rs  comprehensive_json_serialization_test.rs  comprehensive_serpentine_demo.rs  comprehensive_split_patterns.rs  configuration_validation_demo.rs  double_split.rs  five_split.rs  four_split.rs  frustum_channel_demo.rs  json_export_demo.rs  single_split.rs  smooth_serpentine_demo.rs  smooth_transition_test.rs  smooth_transitions_demo.rs  svg_demo.rs  triple_split.rs  unified_generator_demo.rs
examples/3d/: basic_box.rs  basic_cylinder.rs  csgrs_optimization_test.rs  schematic_to_3d.rs
examples/3d/control/: basic_box.rs  cylinder_in_box.rs  hollow_box.rs
examples/3d/operations/: difference_cube_minus_sphere.rs  difference_sphere_minus_cube.rs  intersection_test.rs  subtract_test.rs  union_test.rs  xor_test.rs
examples/bifurcation/: double_split.rs  five_split.rs  four_split.rs  single_split.rs  triple_split.rs
examples/cfd/bifurcation/: double_split.rs  single_split.rs  triple_split.rs
examples/cfd/mixed/: bifurcation_bifurcation_trifurcation.rs  bifurcation_trifurcation.rs  bifurcation_trifurcation_bifurcation.rs  trifurcation_bifurcation.rs  trifurcation_bifurcation_trifurcation.rs  trifurcation_trifurcation_bifurcation.rs
examples/cfd/trifurcation/: double_trifurcation.rs  single_trifurcation.rs  triple_trifurcation.rs
examples/control/: straight_channel.rs
examples/metadata/: basic_metadata_usage.rs  custom_metadata_types.rs
examples/mixed/: bifurcation_bifurcation_trifurcation.rs  bifurcation_trifurcation.rs  bifurcation_trifurcation_bifurcation.rs  trifurcation_bifurcation.rs  trifurcation_bifurcation_trifurcation.rs  trifurcation_trifurcation_bifurcation.rs
examples/optimization/: basic_optimization.rs  length_comparison.rs  profile_comparison.rs
examples/schematics/arcs/: bifurcation_arcs.rs  curvature_direction_demo.rs  directional_flow_arcs.rs  enhanced_directional_arcs.rs  smart_mixed_channels.rs  trifurcation_arcs.rs  variable_curvature.rs
examples/schematics/bifurcation/: double_split.rs  five_split.rs  four_split.rs  single_split.rs  triple_split.rs
examples/schematics/mixed/: bifurcation_bifurcation_trifurcation.rs  bifurcation_trifurcation.rs  bifurcation_trifurcation_bifurcation.rs  trifurcation_bifurcation.rs  trifurcation_bifurcation_trifurcation.rs  trifurcation_trifurcation_bifurcation.rs
examples/schematics/serpentine/: bifurcation_double.rs  bifurcation_single.rs  bifurcation_trifurcation.rs  bifurcation_triple.rs  improved_gaussian_demo.rs  single_serpentine_channel.rs  trifurcation_double.rs  trifurcation_single.rs  trifurcation_triple.rs  wave_phase_direction_demo.rs
examples/schematics/trifurcation/: double_trifurcation.rs  five_trifurcation.rs  four_trifurcation.rs  single_trifurcation.rs  triple_trifurcation.rs
examples/trifurcation/: double_trifurcation.rs  five_trifurcation.rs  four_trifurcation.rs  single_trifurcation.rs  triple_trifurcation.rs
outputs/3d/: basic_cylinder.stl  box.stl  system.stl
outputs/3d/control/: cylinder_in_box.stl  hollow_box.stl
outputs/3d/schematic_to_3d/: schematic_to_3d.stl
src/: codebase_cleanup.rs  config.rs  config_constants.rs  drawing.rs  error.rs  geometry.rs  lib.rs
src/cfd/: flow.rs  flow_rate.rs  hydrodynamic_resistance.rs  mod.rs  pressure.rs  simulation.rs
src/geometry/: adaptive_collision.rs  builders.rs  collision_detection.rs  converter.rs  enhanced_generator.rs  generator.rs  metadata.rs  mod.rs  mod_2d.rs  mod_3d.rs  optimization.rs  state_integration.rs  strategies.rs  strategies_refactored.rs  types.rs
src/mesh/: csg.rs  csgrs_bridge.rs  generator.rs  mod.rs  stl.rs
src/mesh/csg/: algorithms.rs  api.rs  bsp_tree.rs  errors.rs  mod.rs  models.rs  node.rs  operations.rs  plane.rs  polygon.rs  vertex.rs
src/mesh/operations/: conversions.rs  difference.rs  errors.rs  intersection.rs  mod.rs  subtract.rs  union.rs  xor.rs
src/mesh/primitives/: cuboid.rs  cylinder.rs  mod.rs  sphere.rs
src/state_management/: adaptive.rs  bilateral_symmetry.rs  constraints.rs  context_consolidation.rs  error_handling_enhancements.rs  error_handling_utilities.rs  errors.rs  integration_test.rs  managers.rs  mod.rs  parameters.rs  registry.rs  symmetry_integration.rs  validation.rs
src/visualizations/: cfd.rs  mod.rs  mod_3d.rs  plotters_backend.rs  schematic.rs  shared_utilities.rs  traits.rs
tests/: CSG_VALIDATION_REPORT.md  arc_collision_prevention_tests.rs  benchmark_system_tests.rs  comprehensive_cleanup_validation.rs  configuration_tests.rs  csg_csgrs_integration_tests.rs  csg_enhanced_algorithms.rs  csg_mathematical_enhancements.rs  csg_performance_benchmarks.rs  csg_robustness_tests.rs  csg_volume_validation.rs  diameter_aware_collision_tests.rs  error_tests.rs  frustum_channel_tests.rs  gaussian_envelope_tests.rs  improved_gaussian_tests.rs  metadata_system_tests.rs  optimization_integration_tests.rs  optimization_tests.rs  schematic_tests.rs  strategy_tests.rs  visualization_tests.rs  wave_shape_tests.rs
