[package]
name = "scheme"
version = "0.1.0"
edition = "2021"
description = "A focused library for designing 2D microfluidic schematics with bifurcation and trifurcation patterns"
license = "MIT"
repository = "https://github.com/ryancinsight/Millimesh2"
keywords = ["microfluidics", "schematic", "2d", "bifurcation", "trifurcation"]
categories = ["science", "visualization"]

[dependencies]
plotters = "0.3.5"
thiserror = "1.0.56"

# Comprehensive Examples - New consolidated examples
[[example]]
name = "comprehensive_split_patterns"
path = "examples/comprehensive_split_patterns.rs"

[[example]]
name = "comprehensive_serpentine_demo"
path = "examples/comprehensive_serpentine_demo.rs"

[[example]]
name = "comprehensive_arc_demo"
path = "examples/comprehensive_arc_demo.rs"

[[example]]
name = "comprehensive_arc_collision_prevention_demo"
path = "examples/comprehensive_arc_collision_prevention_demo.rs"

[[example]]
name = "svg_demo"
path = "examples/svg_demo.rs"

[[example]]
name = "unified_generator_demo"
path = "examples/unified_generator_demo.rs"



[[example]]
name = "configuration_validation_demo"
path = "examples/configuration_validation_demo.rs"



[dev-dependencies]
criterion = "0.5.1"

[[example]]
name = "basic_optimization"
path = "examples/optimization/basic_optimization.rs"

[[example]]
name = "length_comparison"
path = "examples/optimization/length_comparison.rs"

[[example]]
name = "profile_comparison"
path = "examples/optimization/profile_comparison.rs"

# Metadata examples
[[example]]
name = "basic_metadata_usage"
path = "examples/metadata/basic_metadata_usage.rs"

[[example]]
name = "custom_metadata_types"
path = "examples/metadata/custom_metadata_types.rs"

[[bench]]
name = "geometry_benchmarks"
harness = false

[[bench]]
name = "visualization_benchmarks"
harness = false

[[bench]]
name = "optimization_benchmarks"
harness = false

[[bench]]
name = "metadata_benchmarks"
harness = false

[features]
